--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,13 @@ a{
 
 .logo{
     color: var(--secondary-text-colour);
+    font-family: Raleway, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+
 }
 .logo:hover,
 .logo:focus{
