--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,6 @@ body {
     font-family: 'Roboto', sans-serif;
     color:var(--primary-text-colour);
     font-style: normal
-
 }
 
 
@@ -44,13 +43,20 @@ a{
 }
 
 .link-site{
+    font-weight: 500;
     letter-spacing: 0.02em;
     color: var(--secondary-text-colour);
-    cursor: pointer;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.2;
+    line-height: 1.1;
     letter-spacing: 0.02em;
+}
+
+
+
+nav a.link-site-active {
+    font-weight: bold;
+    color: var(--button-background-colour);
 }
 
 .link-site:hover,
@@ -60,10 +66,11 @@ a{
 
 .link-contact{
     font-size: 14px;
-    line-height: 1.2;
+    line-height: 1.1;
     font-weight: 500;
     color: var(--primary-text-colour);
 }
+
 .link-contact:hover,
 .link-contact:focus{
     
@@ -79,7 +86,7 @@ a{
 .main-title{
     font-weight: 900;
     font-size: 44px;
-    line-height: 1.5;
+    line-height: 1.4;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--secondary-button-colour);
@@ -95,7 +102,7 @@ a{
 .button-main{
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.8;
+    line-height: 1.9;
     display: flex;
     align-items: center;
     text-align: center;
@@ -112,13 +119,12 @@ a{
     color: var(--secondary-text-colour);
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.2;
+    line-height: 1.1;
     text-transform: uppercase;
     
 }
 
 .advantage-text{
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
     color: var(--primary-text-colour);
@@ -139,13 +145,12 @@ a{
 .name{
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.1;
+    line-height: 1.2;
     color: var(--secondary-text-colour);
 }
 .name-work{
-    font-weight: 400;
     font-size: 16px;
-    line-height: 1.1;
+    line-height: 1.2;
     color: var(--primary-text-colour);
 }
 
@@ -156,7 +161,7 @@ a{
     color: var(--secondary-button-colour);
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.2px;
+    line-height: 1.2;
     letter-spacing: 0.03em;
 }
 
@@ -165,10 +170,10 @@ footer{
 }
 
 .adress-title{
-    font-weight: 400;
+    font-style: normal;
+    font-family: Roboto;
     font-size: 14px;
     line-height:1.7;
-    cursor: pointer;
     color: var(--secondary-button-colour);
 
 }
@@ -184,9 +189,9 @@ footer{
 }
 
 .foter-link-contact{
-    font-weight: 400;
+    font-style: normal;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.7;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
@@ -204,7 +209,7 @@ footer{
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.8;
+    line-height: 1.6;
     text-align: center;
     letter-spacing: 0.03em;
 }
@@ -214,20 +219,28 @@ footer{
     color: var(--secondary-button-colour);  
 }
 
+.button-portfolio:focus{
+    background-color: var(--button-background-colour);
+    color: var(--secondary-button-colour);
+}
+
 
 
 .projekt-portfolio{
     font-weight: 700;
     font-size: 18px;
-    line-height: 36px;
+    line-height: 2;
     letter-spacing: 0.06em;
     color: var(--secondary-text-colour);
 }
 
 .projekt-type{
-    font-weight: 400;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.9;
     letter-spacing: 0.03em;
     color: var(--primary-text-colour);
 }
+
+
+
+
