--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,9 @@ nav a.link-site-active {
 
 /*Наша команда*/
 .team-title{
-    
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
     color: var(--secondary-text-colour);
 }
 .name{
